# conflation-ml

./: .gitignore  README.md  api_keys.env.example  error.txt  error3.txt  error_neg.txt  evaluation_summary.txt  find_match.py  incorrect_predictions.csv  measure_time.ps1  output_log2.txt  output_log4.txt  output_log5.txt  output_log7.txt  output_log8.txt  pyproject.toml  pytest_output.txt  requirements.txt
data/: baseline_metrics.txt  baseline_results.parquet  class_details.txt  class_stats.txt  fuzzy_scored.parquet  golden_columns_report.txt  golden_dataset_100.parquet  golden_dataset_100_aligned.parquet  golden_dataset_200.parquet  ground_truth_google_golden.parquet  ground_truth_google_golden_100.parquet  ground_truth_google_no_fallback.parquet  ground_truth_rule_based.parquet  ground_truth_scrape_golden.parquet  ground_truth_scrape_no_fallback.parquet  hp_clean.txt  negative_samples.parquet  phase1_processed.parquet  phase2_scored.parquet  phase3_slm_labeled.parquet  phase3_slm_labeledgemma3_4B.parquet  phase3_slm_labeledgemma3_4B_2prompt.parquet  phase3_slm_labeledgpt4omini.parquet  phase3_slm_labeledkimi.parquet  phase5_full_results.parquet  phase5_xgboost_results.parquet  randomforest_binary_results.parquet  results3_clean.txt  results4_clean.txt  results5_clean.txt  results6_clean.txt  rule_based_100.parquet  strategy_clean.txt  strategy_results.txt  synthetic_4class_golden.parquet  synthetic_4class_kimi.parquet  xgboost_binary_results.parquet  xgboost_multiclass_results.parquet  xgboost_per_attr_ensemble_results.parquet  xgboost_per_attr_results.parquet  (+1 more)
(+140 files in other folders)
